@@ -162,6 +162,12 @@ runProviderPactVerification.dependsOn contract
 
 runProviderPactVerification.finalizedBy pactVerify
 
+task fortifyScan(type: JavaExec) {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 def getCheckedOutGitCommitHash() {
   'git rev-parse --verify --short HEAD'.execute().text.trim()
 }
@@ -344,7 +350,7 @@ dependencies {
   }
   testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '3.3.0'
   testImplementation group: 'io.rest-assured', name: 'rest-assured-common', version: '4.2.0'
-
+  testImplementation 'com.github.hmcts:fortify-client:1.2.0:all'
   testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.4.6'
   testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.4.6'
   testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.7'
